--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -18,8 +18,10 @@
 <resources>
     <color name="photo_placeholder">#ccc</color>
 
-    <color name="theme_primary">#04561A</color>
-    <color name="theme_primary_dark">#04561A</color>
-    <color name="theme_accent">#04561A</color>
+    <!-- primary color matches branding on launcher icon -->
+    <color name="theme_primary">#FD5621</color>
+    <color name="theme_primary_dark">#BF360C</color>
+    <color name="theme_accent">#00BFA5</color>
+
     <color name="ltgray">#ffe0e0e0</color>
 </resources>
