--- a/XYZReader/src/main/res/layout/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout/fragment_article_detail.xml
@@ -19,7 +19,7 @@
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
-            app:expandedTitleMarginBottom="32dp"
+            app:expandedTitleMarginBottom="48dp"
             app:expandedTitleMarginEnd="64dp"
             app:expandedTitleMarginStart="48dp"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
@@ -32,15 +32,21 @@
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax" />
 
+            <View
+                android:id="@+id/image_scrim"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/scrim"/>
+
             <TextView
                 android:id="@+id/article_byline"
                 style="?android:attr/textAppearanceSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#8fff"
+                android:textColor="#afff"
                 android:text="Article byline"
                 android:layout_gravity="start|bottom"
-                android:layout_marginBottom="8dp"
+                android:layout_marginBottom="16dp"
                 android:layout_marginLeft="48dp"
                 android:layout_marginStart="48dp"
                 app:layout_collapseMode="pin"/>
