--- a/XYZReader/src/main/res/values-w800dp/macro_layout.xml
+++ b/XYZReader/src/main/res/values-w800dp/macro_layout.xml
@@ -6,4 +6,7 @@
 
     <!-- detail -->
     <dimen name="detail_card_max_width">704dp</dimen>
+
+    <dimen name="background_image_height">300dp</dimen>
+
 </resources>
