--- a/XYZReader/src/main/res/values/dimens.xml
+++ b/XYZReader/src/main/res/values/dimens.xml
@@ -8,5 +8,7 @@
     <dimen name="fab_margin">24dp</dimen>
 
     <dimen name="cardview_content_margin">8dp</dimen>
+    
+    <dimen name="background_image_height">200dp</dimen>
 
 </resources>
