--- a/XYZReader/src/main/res/layout-sw600dp-land/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout-sw600dp-land/fragment_article_detail.xml
@@ -38,19 +38,6 @@
                 android:layout_height="match_parent"
                 android:background="@drawable/scrim"/>
 
-            <TextView
-                android:id="@+id/article_byline"
-                style="?android:attr/textAppearanceSmall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#afff"
-                android:text="Article byline"
-                android:layout_gravity="start|bottom"
-                android:layout_marginBottom="16dp"
-                android:layout_marginLeft="48dp"
-                android:layout_marginStart="48dp"
-                app:layout_collapseMode="pin"/>
-
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
@@ -78,22 +65,20 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/title_text_view"
+                android:id="@+id/article_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 style="@style/Base.TextAppearance.AppCompat.Title"
-                android:text="Title goes here!"
                 android:layout_marginLeft="@dimen/detail_inner_horiz_margin"
                 android:layout_marginRight="@dimen/detail_inner_horiz_margin"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="8dp"/>
 
             <TextView
-                android:id="@+id/byline_text_view"
+                android:id="@+id/article_byline"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 style="@style/Base.TextAppearance.AppCompat.Caption"
-                android:text="Byline goes here."
                 android:layout_marginLeft="@dimen/detail_inner_horiz_margin"
                 android:layout_marginRight="@dimen/detail_inner_horiz_margin"
                 android:layout_marginBottom="16dp"/>
