--- a/XYZReader/src/main/res/layout-sw600dp-land/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout-sw600dp-land/fragment_article_detail.xml
@@ -6,7 +6,7 @@
     android:fitsSystemWindows="true">
 
     <!-- Flexible space with image referenced from: http://blog.grafixartist.com/toolbar-animation-with-android-design-support-library/ -->
-    <android.support.design.widget.AppBarLayout
+    <FrameLayout
         android:id="@+id/appbar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -18,7 +18,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
-            app:contentScrim="?attr/colorPrimary"
             app:expandedTitleMarginBottom="48dp"
             app:expandedTitleMarginEnd="64dp"
             app:expandedTitleMarginStart="48dp"
@@ -47,7 +46,7 @@
 
         </android.support.design.widget.CollapsingToolbarLayout>
 
-    </android.support.design.widget.AppBarLayout>
+    </FrameLayout>
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="fill_parent"
