--- a/XYZReader/src/main/res/layout-sw600dp-land/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout-sw600dp-land/fragment_article_detail.xml
@@ -53,9 +53,10 @@
         android:layout_height="fill_parent"
         android:layout_gravity="center_horizontal"
         android:background="#fff"
-        android:elevation="2dp"
+        android:elevation="4dp"
         android:layout_marginLeft="180dp"
         android:layout_marginRight="180dp"
+        android:layout_marginTop="96dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
